# zedc_ascii

./: CMakeLists.txt  README.md  zlib.pc.in
include/: zlib.h
src/: CMakeLists.txt  zedc_ascii.c
tests/: CMakeLists.txt  compress_test.c  gzdopen_test.c  tests.sh
